<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main_container"
    >

    <LinearLayout
        android:id="@+id/topics"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        android:background="#FCFFE4"
        >
        <TextView
            android:id="@+id/athlete"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/athlete"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic|bold"
            android:rotation="-90"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            />
        <TextView
            android:id="@+id/actors"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/actors"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic|bold"
            android:rotation="-90"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            />
        <TextView
            android:id="@+id/writers"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/writers"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic|bold"
            android:rotation="-90"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            />
        <TextView
            android:id="@+id/poets"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/poets"
            android:textSize="16sp"
            android:textStyle="italic|bold"
            android:rotation="-90"
            android:textColor="@color/black"

            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            />
        <TextView
            android:id="@+id/politicians"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/politician"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic|bold"
            android:rotation="-90"
            android:layout_gravity="center_vertical"
            android:gravity="end|center"
            />
        <TextView
            android:id="@+id/scientist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/scientist"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic|bold"
            android:rotation="-90"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@id/topics"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="-157dp"
        tools:listitem="@layout/item_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>