<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item"
    >
    <ImageView
        android:id="@+id/image"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo"
        android:src="@drawable/galileo"
        android:background="@drawable/bg_item"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/leanardo_da_vince"
        android:textSize="18sp"
        android:maxLines="1"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:ellipsize="end"
        android:layout_marginTop="3dp"/>
    <TextView
        android:id="@+id/desc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/leanardo_da_vince_dfghj_ffgh_xrxt_rt"
        android:textSize="12sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textStyle="italic"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"

        />
</androidx.constraintlayout.widget.ConstraintLayout>